<package format="2">
  <name>racecar_simulator</name>
  <version>0.0.0</version>
  <description>A racecar simulator based on the MIT racecar simulator.</description>

  <maintainer email="piechocki.mateusz97@gmail.com">Mateusz Piechocki</maintainer>
  <maintainer email="bartptak@gmail.com">Bartosz Ptak</maintainer>
  <maintainer email="sim@sim.pl">Michal Barelkowski</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>map_server</exec_depend>
</package>
